# akips

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  create-python-package-release.yml
akips/: __init__.py  akips.py  exceptions.py
akips_setup/: site_scripting.pl
tests/: test_connection.py  test_import_akips.py
