[tool.poetry]
name = "akips"
version = "0.1.5"
description = "Module to interact with the AKiPS Network Monitoring Software API interface"
authors = ["William E Whitaker <will.whitaker@unc.edu>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/wwhitaker/akips"

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.31"
pytz = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
flake8 = "^6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
